# deeprob-kit

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pylint-report.yml  pytest-coverage.yml  sphinx-deploy.yml  sphinx-multidoc.yml
benchmark/: README.md  benchmark_deeprob.sh  benchmark_spflow.sh  clt_queries.py  requirements.txt  run_deeprob.py  run_deeprob_clt.py  run_deeprob_spn.py  run_spflow.py  run_spflow_clt.py  run_spflow_spn.py  settings.json  spn_queries.py  utils.py
deeprob/: context.py
deeprob/flows/: utils.py
deeprob/flows/layers/: __init__.py  autoregressive.py  coupling.py  densenet.py  resnet.py
deeprob/flows/models/: __init__.py  base.py  maf.py  realnvp.py
deeprob/spn/algorithms/: __init__.py  evaluation.py  gradient.py  inference.py  (+3 more)
deeprob/torch/: base.py  callbacks.py  constraints.py  datasets.py  initializers.py  metrics.py  routines.py  transforms.py  utils.py
deeprob/utils/: __init__.py  data.py  graph.py  random.py  region.py  statistics.py
docs/: .gitignore  Makefile  README.md  conf.py  index.rst  requirements.txt
docs/_templates/: versions.html
docs/markdown/: docs.md  experiments.md
docs/source/: benchmark.md  conf.py  examples.md  index.html  index.rst
examples/: .gitignore  README.md  clt_plot.py  clt_queries.py  clt_to_spn.py  cnet_bd.py  dgcspn_mnist.py  dgcspn_olivetti.py  maf_cifar10.py  naive_model.py  nvp1d_moons.py  nvp2d_cifar10.py  nvp2d_mnist.py  ratspn_mnist.py  ratspn_nvp1d_mnist.py  sklearn_interface.py  spn_clt_em.py  spn_custom_leaf.py  spn_latent_mnist.py  spn_moments.py  spn_plot.py
experiments/: .gitignore  README.md  datasets.py  dgcspn.py  energy.py  flows.py  ratspn.py  requirements.txt  spn.py  utils.py
test/: test_clt.py  test_context.py  test_data.py  test_dgcspn.py  test_em.py  test_flows.py  test_graph.py  test_leaf.py  test_random.py  test_ratspn.py  test_spn.py  test_statistics.py  test_torch.py  utils.py
tests/: conftest.py  test_clt.py  test_context.py  test_data.py  test_dgcspn.py  test_em.py  test_flows.py  test_graph.py  test_leaf.py  test_random.py  test_ratspn.py  test_splitting.py  test_spn.py  test_statistics.py  test_torch.py  utils.py
(+65 files in other folders)
